chore: Add support for FE authentication
comments: Other ejs changes

--- a/views/includes/banner_section.ejs
+++ b/views/includes/banner_section.ejs
@@ -1,4 +1,4 @@
-<section class="full_row bg_img_5 py_80 overlay_1 page-banner" style="background-image: url('<%= imageUrl %>')">
+<section class="full_row bg_img_5 py_80 overlay_1 page-banner" style="background-image: url('<%= bannerImageUrl %>')">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
