--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -15,7 +15,7 @@
             </header>
 
             <!-- Banner Section Start -->
-            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
             <!-- Banner Section End -->
 
             <!-- Who We Are Part Start -->
