--- a/views/pages/submit_property.ejs
+++ b/views/pages/submit_property.ejs
@@ -16,7 +16,7 @@
         <!-- Banner Section End --> 
         
         <!-- Submit Property Start -->
-        <section id="submit_property" class="full_row py_80 bg_gray">
+        <section id="submitPropertyApp" class="full_row py_80 bg_gray">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-9 col-md-10">
