--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
 <div class="main_header_1" id="navigation_component">
         <div class="container">
                 <div class="row">
-                        <div class="col-md-12 col-sm-12">
+                        <div class="col-md-12 col-sm-12" id="navbarApp">
                                 <nav class="navbar navbar-expand-lg">
                                   <a class="navbar-brand" href="/">
                                     <img class="nav-logo" src="/img/ut-navlogo-transp.png" alt="logo">
@@ -46,22 +46,19 @@
                               <li class="nav-item"> <a
                                               class="nav-link <%= path === '/contact' ? 'active' : '' %>"
                                               href="/contact">Contact</a></li>
-                                      <li class="nav-item"> <a class="nav-link" href="#"
+                                      <li class="nav-item" v-if="isLoggedIn"> <a @click="logOut" class="nav-link" href="#"
                                               id="basic_logout">Delogare</a></li>
-                                      <li class="nav-item"> <a
+                                      <li class="nav-item" v-if="!isLoggedIn"> <a
                                               class="nav-link <%= path === '/signup' ? 'active' : '' %>"
                                               href="/creare-cont">Creează cont</a></li>
-                              <li class="nav-item"> <a
+                              <li class="nav-item" v-if="!isLoggedIn"> <a
                                               class="nav-link <%= path === '/login' ? 'active' : '' %>"
                                               href="/autentificare">Intră in cont</a></li>
                                           </ul>
-                                          <div class="submit_property ml-2"><a class="btn btn_primary_bg"
-                                            href="/adauga-proprietate">Adauga proprietate</a></div>
+                                          <div @click="getAddProperty" class="submit_property ml-2"><button class="btn btn_primary_bg">Adauga proprietate</button></div>
                                         </div>
                                       </nav>
                         </div>
                 </div>
         </div>
 </div>
-
-<script src="/js/custom/navbar.js"></script>
