--- a/views/includes/scripts.ejs
+++ b/views/includes/scripts.ejs
@@ -10,8 +10,6 @@
 <script src="/js/lib/bootstrap-4.1.3.min.js"></script> 
 <script src="/js/lib/bootstrap-select.min.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/lib/YouTubePopUp.jquery.js"></script> 
-<!--===============================================================================================--> 
 <script src="/js/lib/jquery.fancybox.pack.js"></script> 
 <script src="/js/lib/jquery.fancybox-media.js"></script> 
 <!--===============================================================================================--> 
@@ -26,7 +24,6 @@
 <!--===============================================================================================--> 
 <script src="/js/lib/wow.js"></script> 
 <!--===============================================================================================--> 
-<script src="/js/lib/jquery.cookie.js"></script> 
 <script src="/js/lib/settings.js"></script> 
 <!--===============================================================================================--> 
 <script src="/js/lib/jshashtable-2.1_src.js"></script> 
@@ -47,3 +44,4 @@
 <script src="/js/lib/jquery.barrating.js"></script> 
 <!--===============================================================================================--> 
 <script src="/js/lib/custom.js"></script> 
+<script src="/js/auth/main.js"></script>
