--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -16,7 +16,7 @@
             </header>
 
             <!-- Banner Section Start -->
-            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle, imageUrl:imageUrl}) %>
+            <%- include('../includes/banner_section.ejs', {pageTitle: pageTitle}) %>
             <!-- Banner Section End -->
 
             <!-- Contact Section Start -->
