chore: Bug modal not displayed when submit is success

--- a/views/pages/submit_property.ejs
+++ b/views/pages/submit_property.ejs
@@ -39,7 +39,7 @@
                                                                 <select name="transactionType"
                                                                     v-model="formInputData.transactionType"
                                                                     class="form-control">
-                                                                    <option selected disabled value="">Vanzare/Inchiriere
+                                                                    <option selected disabled value="Vanzare/Inchiriere">Vanzare/Inchiriere
                                                                     </option>
                                                                     <option value="1">Vanzare</option>
                                                                     <option value="2">Inchiriere</option>
