--- a/views/includes/modal.ejs
+++ b/views/includes/modal.ejs
@@ -1,4 +1,4 @@
-<div v-if="errors.length > 0" id="modal-message" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog"
+<div v-if="errors.length > 0 || successMessage.length > 0" id="modal-message" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog"
     aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
