chore: Fix add property endpoint

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -19,7 +19,7 @@
                 <a class="nav-link dropdown-toggle <%= path.indexOf('chirii') > -1 ? 
                                 'active' : '' %>" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Chirii+
+                  Chirii
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <% for (propType of propertyTypes) {%>
