Modificare pentru test

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -67,7 +67,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="title_row text-center mb-5">
-                                <h3 class="title mb-4">Ultimele <span class="text_primary">Noutăți</span></h3>
+                                <h3 class="title mb-4">Ultimele <span class="text_primary">Noutăți!!!!</span></h3>
                             </div>
                         </div>
                     </div>
